--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="action_sign_in_short">Sign in</string>
     <string name="welcome">"Welcome !"</string>
     <string name="invalid_username">Not a valid username</string>
-    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="invalid_password">Password must be > 6 characters</string>
     <string name="login_failed">"Login failed"</string>
+    <string name="have_not_account">"Don't have an Account? Sign up"</string>
+    <string name="have_account">"Already registered ? Login Here"</string>
 </resources>
