--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="login_failed">"Login failed"</string>
     <string name="have_not_account">"Don't have an Account? Sign up"</string>
     <string name="have_account">"Already registered ? Login Here"</string>
+    <string name="main_title">Offres</string>
 </resources>
