--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="have_not_account">"Don't have an Account? Sign up"</string>
     <string name="have_account">"Already registered ? Login Here"</string>
     <string name="main_title">Offres</string>
+    <string name="list_of_requests">list of requests</string>
 </resources>
